# shelf

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml
.commandcode/taste/: taste.md
.git-agent/: config.yml
.github/workflows/: ci.yml
doc/: tui-interaction.md
examples/: dump_tui.rs
src/: apply.rs  cli.rs  command.rs  config.rs  credentials.rs  error.rs  lib.rs  main.rs  mounts.rs  paths.rs  progress.rs  remote_path.rs  root_cli.rs  source.rs  status.rs  systemd.rs
src/tui/: actions.rs  app.rs  events.rs  mod.rs  view.rs
