[package]
name = "shelf"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "shelf"
path = "src/main.rs"

[[bin]]
name = "shelf-root"
path = "src/bin/shelf-root.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.28.1"
dialoguer = "0.11.0"
nix = { version = "0.29.0", features = ["user"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
tempfile = "3.20.0"
