[package]
name = "shelf"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "shelf"
path = "src/main.rs"

[[bin]]
name = "shelf-root"
path = "src/bin/shelf-root.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
nix = { version = "0.31.3", features = ["user"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
